--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     --> 
         <link rel="stylesheet" style="text/css" href="main.css" />
         <script src='intelxdk.js'></script>
+        <script src="initialize.js" type="text/javascript"></script>
         <script type="text/javascript" src="social_proto.js"></script>
         <script type="text/javascript">
             /* This code is used to run as soon as Intel activates */
