Added Facebook to posts database

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 		<div role="main" class="ui-content">
 			<h3>Alumni</h3>
-			<a href="http://Facebook.com/rrcalumni" data-ajax="false">Facebook.com/rrcalumni</a>
+			<a href="fb://profile/rrcalumni" target="_system" data-ajax="false">Facebook.com/rrcalumni</a>
 			<p>Blogs.rrc.ca/goingplaces</p>
 			<h3>Applied Research</h3>
 			<p>@rrcresearch</p>
