minor index.html fix

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
     </div><!-- /page -->
 
     <div data-role="page" id="settings">
-            <div class="header" data-role="header" data-position="fixed" data-theme=e>
+            <div class="header" data-role="header" data-position="fixed" data-tap-toggle="false" data-theme=e>
                 <h1>Profile</h1>
             </div>
             
