--- a/index-Ken-5.html
+++ b/index-Ken-5.html
@@ -415,7 +415,9 @@
                 		<input id="screen_name" name="screen_name" disabled="true"  data-role="none"/>
                 	</div>
                 	<div id="avatar">
-                		
+                		<div id="avatar_input">
+	                		<input id="avatar_browse" type="file" name="files[]" data-role="none" />
+    					</div>
     					<div id="avatar_display"></div>
     				</div>
                 	<div id="progress"></div>
