--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
 		<!-- Social javascript -->
 		<script src="social_proto.js"></script>
+        <script src="unofficial.js"></script>
 		<!-- Events javascript -->
 	    <!-- Job Central javascript -->
 	    <script src="jobscentral.js"></script>
