Added YouTube to posts, addressed some format issues with posts

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<li class="twitter menuitem"><img id="menu_Twitter" class="social_icons" src="img/Twitter_logo_blue_48_48.png" alt="Twitter"/></li>
 				<li class="facebook menuitem"><img id="menu_Facebook" class="social_icons" src="img/Facebook_logo_blue_48_48.png" alt="Facebook"/></li>
 				<li class="instagram menuitem"><img id="menu_Instagram" class="social_icons" src="img/instagramIcon.png" alt="Instagram"/></li>
-				<li class="youtube menuitem"><img id="menu_Youtube" class="social_icons" src="img/logo_youtube_48x48.png" alt="YouTube"/></li>
+				<li class="youtube menuitem"><img id="menu_YouTube" class="social_icons" src="img/logo_youtube_48x48.png" alt="YouTube"/></li>
 				<li class="blog menuitem"><img id="menu_Blog" class="social_icons" src="img/blog_icon_48x48.png" alt="Blog"/></li>
 				<li class="unofficial menuitem"><span id="menu_unofficial" class="social_icons">U</span></li>
 			</ul>
@@ -129,14 +129,10 @@
 
 
 	<div data-role="page" id="events">
-        <script> 
-            $("#events").on('pageshow',function() {
-                        google.maps.event.trigger(map, 'resize');                      
-                    });
-	   </script>
-        <div class="header" data-role="header" data-position="fixed" data-tap-toggle="false" data-theme=e>
+        
+        <div class="header" data-role="header" data-tap-toggle="false" data-theme="e">
             <h1>Events</h1>
-            <a data-icon="grid" data-iconpos="notext" data-role"button" id="events_button" class="menubutton ui-btn-right"></a>
+            <a data-icon="grid" data-iconpos="notext" data-role="button" id="events_button" class="menubutton ui-btn-right"></a>
             
          </div>
          <div class="menubar" id="events_menubar" style="display: none">
